log
Fri 19 Aug 2022 12:44:09 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
54ddba0
Fri 19 Aug 2022 01:08:18 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:3: error: unknown type name ‘current’
   47 |   current para que apunte a ese nodo.
      |   ^~~~~~~
list.c:47:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘que’
   47 |   current para que apunte a ese nodo.
      |                ^~~
list.c: In function ‘pushFront’:
list.c:63:9: error: unused variable ‘nodoNuevo’ [-Werror=unused-variable]
   63 |   Node* nodoNuevo = createNode(data);
      |         ^~~~~~~~~
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5a2cda2
Fri 19 Aug 2022 01:08:48 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:62:9: error: unused variable ‘nodoNuevo’ [-Werror=unused-variable]
   62 |   Node* nodoNuevo = createNode(data);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3814964
Fri 19 Aug 2022 01:11:52 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   64 |     return NULL;
      |            ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:66:7: error: ‘lñist’ undeclared (first use in this function); did you mean ‘list’?
   66 |   if (lñist != NULL){
      |       ^~~~~
      |       list
list.c:66:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:62:9: error: unused variable ‘nodoNuevo’ [-Werror=unused-variable]
   62 |   Node* nodoNuevo = createNode(data);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
153a711
Fri 19 Aug 2022 01:18:46 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   64 |     return NULL;
      |            ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:62:9: error: unused variable ‘nodoNuevo’ [-Werror=unused-variable]
   62 |   Node* nodoNuevo = createNode(data);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90a8b2f
Fri 19 Aug 2022 01:19:28 PM UTC: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:62:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   62 |   return NULL;
      |          ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fabab11
Fri 19 Aug 2022 01:19:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22a0866
Fri 19 Aug 2022 01:20:50 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
4fc69c5
Fri 19 Aug 2022 01:21:14 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
4376278
Fri 19 Aug 2022 01:21:56 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
46b98ab
Fri 19 Aug 2022 01:28:41 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
a87b4d9
Sat 20 Aug 2022 12:10:56 AM UTC: 
 list.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  1|5
total_score: 10/70
8cfb5a9
Sat 20 Aug 2022 12:14:08 AM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
defe600
